<resources>
    <string name="app_name">smartword</string>
    <string name="action_settings">Settings</string>
    <string name="category_name">Simple category</string>

    <string name="add_word_name">Add word</string>
    <string name="add_lesson_name">Add lesson</string>
    <string name="edit_lesson_name">Update lesson</string>
    <string name="edit_word_name">Update word</string>
    <string name="show_lesson_name">Content lesson</string>
    <string name="show_word_name">Content word</string>

    <string name="category_tab">CATEGORY</string>
    <string name="dictionary_tab">DICTIONARY</string>

    <string name="name_hint">name</string>
    <string name="description_hint">description</string>
    <string name="transcription_hint">transcription</string>
    <string name="translation_hint">translation</string>
    <string name="association_hint">association</string>
    <string name="etymology_hint">etymology</string>
    <string name="unknown_hint">unknown</string>

    <string name="transcription_title">transcription:</string>
    <string name="translation_title">translation:</string>
    <string name="association_title">association:</string>
    <string name="etymology_title">etymology:</string>
    <string name="description_title">description:</string>

    <string name="add_title">Add</string>
    <string name="sort_title">Sort</string>
    <string name="delete_title">Delete</string>
    <string name="edit_title">Edit</string>
    <string name="search_hint">Search …</string>
    <string name="next_word_title">Next word</string>

    <string name="empty_categories">List category are empty</string>
    <string name="empty_dictionary">List lessons are empty</string>
    <string name="empty_words">List words are empty</string>

    <string name="language_header">Language</string>
    <string name="theme_header">Theme</string>
    <string name="language_title">Change languages</string>
    <string name="theme_title">Change theme light/night</string>
    <string name="settings_title">SettingsActivity</string>
</resources>
