<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".ui.word.AddWordActivity">

    <ImageView
        android:id="@+id/item_word_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/word_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_word_text_view"
            android:layout_width="0dp"
            android:layout_height="48dp"

            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="0.5"

            android:hint="@string/name_hint"
            android:inputType="text" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/load_word_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            app:fabCustomSize="48dp"
            app:maxImageSize="24dp"
            app:backgroundTint="@color/gray_color"
            app:srcCompat="@android:drawable/ic_menu_search"
            tools:ignore="RelativeOverlap"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/voice_word_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            app:fabCustomSize="48dp"
            app:maxImageSize="24dp"
            app:backgroundTint="@color/gray_color"
            tools:ignore="RelativeOverlap"/>
    </LinearLayout>

    <EditText
        android:id="@+id/transcription_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:hint="@string/transcription_hint"/>

    <EditText
        android:id="@+id/translation_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:hint="@string/translation_hint"/>

    <EditText
        android:id="@+id/association_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:hint="@string/association_hint"/>

    <EditText
        android:id="@+id/etymology_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:hint="@string/etymology_hint"/>

    <EditText
        android:id="@+id/description_word_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:hint="@string/description_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_word_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:text="@string/add_title"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"

            app:tint="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>