<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".view.activity.EditLessonActivity">

    <ImageView
        android:id="@+id/item_lesson_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_weight="1"
        android:layout_gravity="center"

        android:src="@drawable/lesson_icon" />

    <EditText
        android:id="@+id/name_lesson_text_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"

        android:hint="@string/name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/description_lesson_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2.5"

        android:ems="15"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/description_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_lesson_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"

            android:text="@string/edit_title"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"

            app:tint="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>